--- a/style/style.css
+++ b/style/style.css
@@ -165,12 +165,12 @@
             margin-top: 2rem;
         }
 
-        .content-grid-col {
+        /* .content-grid-col {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
             margin-top: 2rem;
-        }
+        } */
 
         .card {
             background-color: var(--light-gray);
@@ -179,6 +179,7 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
             border-left: 5px solid var(--teal);
+            text-align: center;
         }
 
         .card:hover {
